--- a/storage.html
+++ b/storage.html
@@ -10,9 +10,9 @@
 
 <body>
     <h1>Local storage and session storage</h1>
-    <input type="text" placeholder="storage id">
-    <input type="text" placeholder="storage value">
-    <button>add to storage</button>
+    <input id="storage-id" type="text" placeholder="storage id">
+    <input id="storage-value" type="text" placeholder="storage value">
+    <button onclick="saveToStorage()">add to storage</button>
     <script src="storage.js"></script>
 
 
